syntax = "proto3";

option csharp_namespace = "DiscountGrpc.Protos";

service DiscountGrpcService{
	rpc GetDiscount(GetDiscountRequest) returns (DiscountModel);
}

message GetDiscountRequest{
	string discountCode = 1;
}

message DiscountModel{
	int32 id = 1;
	string discountCode = 2;
	int32 amount = 3;
}
